--- a/autotest/config.yaml
+++ b/autotest/config.yaml
@@ -54,6 +54,7 @@ tp_config:
     InternVL2-Llama3-76B-AWQ: 4
     gpt-oss-20b: 2
     gpt-oss-120b: 4
+    Qwen2.5-14B: 4
 
 
 turbomind_chat_model:
