--- a/autotest/config.yaml
+++ b/autotest/config.yaml
@@ -7,21 +7,6 @@ dataset_path: /nvme/qa_test_models/datasets/ShareGPT_V3_unfiltered_cleaned_split
 env_tag: a100
 
 opencompass_dir: "/root/_wk/opencompass"
-work_dir: "/nvme/qa_test_models/eval_work"
-
-evaluation:
-  timeout: 7200
-  cleanup_temp: true
-
-# Chat模型专用评估配置
-chat_evaluation:
-  datasets: ["gsm8k", "race", "ifeval"]
-  config_file: "eval_config_chat.py"
-
-# Base模型专用评估配置
-base_evaluation:
-  datasets: ["gsm8k", "race", "gpqa", "winogrande"]
-  config_file: "eval_config_base.py"
 
 tp_config:
     Llama-4-Scout-17B-16E-Instruct: 4
@@ -255,6 +240,9 @@ turbomind_base_model:
     - internlm/internlm2_5-1_8b
     - internlm/internlm2_5-20b
     - codellama/CodeLlama-7b-hf
+    - Qwen/Qwen2.5-14B
+    - Qwen/Qwen2-7B
+    - Qwen/Qwen2.5-7B
 
 pytorch_base_model:
     - Qwen/Qwen3-8B-Base
@@ -404,5 +392,25 @@ benchmark_model:
 
 
 evaluate_model:
-  - Qwen/Qwen2.5-14B
+  ## base
   - internlm/internlm2_5-7b
+#   - internlm/internlm2_5-7b-inner-4bits
+  - Qwen/Qwen2.5-14B
+  - Qwen/Qwen2-7B
+  - Qwen/Qwen2.5-7B
+  ## chat
+  - Qwen/Qwen1.5-7B-Chat
+  - google/gemma-2-9b-it
+  - google/gemma-2-27b-it
+  - internlm/internlm2_5-7b-chat
+  - internlm/internlm3-8b-instruct
+  - meta-llama/Meta-Llama-3-8B-Instruct
+  - meta-llama/Meta-Llama-3-1-8B-Instruct
+  - Qwen/Qwen2-7B-Instruct
+  - Qwen/Qwen2.5-7B-Instruct
+  - Qwen/Qwen2.5-32B-Instruct
+  - meta-llama/Llama-2-7b-chat-hf
+  - Qwen/Qwen1.5-MoE-A2.7B-Chat
+  - internlm/internlm2_5-20b-chat
+#   - internlm/internlm2_5-7b-chat-inner-4bits
+#   - internlm/internlm2_5-7b-chat-inner-w8a8
