--- a/.github/workflows/api_eva.yml
+++ b/.github/workflows/api_eva.yml
@@ -95,10 +95,10 @@ jobs:
         with:
           repository: ${{ github.event.inputs.repo_org || 'InternLM/lmdeploy' }}
           ref: ${{github.event.inputs.repo_ref || 'main'}}
-      - name: Download Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: my-artifact-17485706612-py310
+      # - name: Download Artifacts
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: my-artifact-17485706612-py310
 
       - name: Install lmdeploy - dependency
         run: |
@@ -109,7 +109,7 @@ jobs:
 
       - name: Install lmdeploy
         run: |
-          python3 -m pip uninstall lmdeploy -y && python3 -m pip install lmdeploy-*.whl --no-deps
+          # python3 -m pip uninstall lmdeploy -y && python3 -m pip install lmdeploy-*.whl --no-deps
           python3 -m pip install -r requirements/test.txt
 
       - name: Install opencompass
