--- a/.github/workflows/api_eva.yml
+++ b/.github/workflows/api_eva.yml
@@ -7,12 +7,12 @@ on:
         required: false
         description: 'Tested repository organization name. Default is InternLM/lmdeploy'
         type: string
-        default: 'InternLM/lmdeploy'
+        default: 'littlegy/lmdeploy'
       repo_ref:
         required: false
         description: 'Set branch or tag or commit id. Default is "main"'
         type: string
-        default: 'main'
+        default: 'api_evaluate'
 
 
 env:
@@ -104,7 +104,7 @@ jobs:
         run: |
           python3 -m pip install sentence_transformers==2.2.2 opencv-python-headless<4.10 --no-deps
           python3 -m pip install numpy==1.26.4 pandas pynvml --no-deps
-          python3 -m pip install -r ${{ env.OFFLINE_REQUIREMENTS }}
+          python3 -m pip install -r requirements_cuda.txt
 
       - name: Install lmdeploy
         run: |
