--- a/.github/workflows/api_eva.yml
+++ b/.github/workflows/api_eva.yml
@@ -102,8 +102,8 @@ jobs:
 
       - name: Install lmdeploy - dependency
         run: |
-          python3 -m pip install sentence_transformers==2.2.2 opencv-python-headless<4.10 --no-deps
-          python3 -m pip install numpy==1.26.4 pandas pynvml --no-deps
+          python3 -m pip install "sentence_transformers==2.2.2" "opencv-python-headless<4.10" --no-deps
+          python3 -m pip install "numpy==1.26.4" pandas pynvml --no-deps
           python3 -m pip install -r requirements_cuda.txt
 
       - name: Install lmdeploy
