--- a/.github/workflows/api_eva.yml
+++ b/.github/workflows/api_eva.yml
@@ -109,10 +109,7 @@ jobs:
           python3 -m pip install -r requirements/test.txt
       - name: Install opencompass
         run: |
-          git clone --depth=1 https://github.com/open-compass/opencompass.git
-          cd opencompass
-          python3 -m pip install -e .
-          echo "OPENCOMPASS_DIR=$(pwd)" >> $GITHUB_ENV
+          python3 -m pip install opencompass
 
       - name: Check env
         run: |
@@ -120,7 +117,7 @@ jobs:
           lmdeploy check_env
           rm -rf allure-results
           # remove tmp log in testcase
-          rm -rf /nvme/qa_test_models/autotest_model/log/*
+          rm -rf /nvme/qa_test_models/autotest_model/*
           mkdir -p ${{ env.REPORT_DIR }}/.pytest_cache
           ln -s ${{ env.REPORT_DIR }}/.pytest_cache autotest
 
