--- a/autotest/config.yaml
+++ b/autotest/config.yaml
@@ -24,6 +24,7 @@ tp_config:
     Qwen3-30B-A3B: 2
     Qwen3-30B-A3B-Base: 2
     Qwen-VL-Chat: 2
+    Qwen2.5-32B-Instruct : 2
     Qwen2.5-72B-Instruct: 4
     Qwen2.5-VL-32B-Instruct: 2
     DeepSeek-V2-Lite-Chat: 2
@@ -37,6 +38,7 @@ tp_config:
     InternVL2-Llama3-76B-AWQ: 4
     gpt-oss-20b: 2
     gpt-oss-120b: 4
+
 
 
 turbomind_chat_model:
