--- a/.github/workflows/api_eva.yml
+++ b/.github/workflows/api_eva.yml
@@ -124,8 +124,8 @@ jobs:
           lmdeploy check_env
           rm -rf allure-results
           # remove tmp log in testcase
-          rm -rf /nvme/qa_test_models/autotest_model/log/*
-          rm -rf /nvme/qa_test_models/autotest_model/tmp/*
+          rm -rf /nvme/qa_test_models/autotest_model/log/${{ github.run_id }}/*
+          rm -rf /nvme/qa_test_models/autotest_model/tmp/${{ github.run_id }}/*
           mkdir -p ${{ env.REPORT_DIR }}/.pytest_cache
           ln -s ${{ env.REPORT_DIR }}/.pytest_cache autotest
 
