--- a/autotest/config.yaml
+++ b/autotest/config.yaml
@@ -77,6 +77,7 @@ turbomind_chat_model:
     - Qwen/Qwen2.5-7B-Instruct
     - Qwen/Qwen2.5-32B-Instruct
     - Qwen/Qwen2.5-72B-Instruct
+    - Qwen/Qwen2-7B-Instruct
     - Qwen/Qwen2-57B-A14B-Instruct-GPTQ-Int4
     - Qwen/Qwen2.5-VL-7B-Instruct
     - Qwen/Qwen2-VL-2B-Instruct
@@ -143,6 +144,7 @@ pytorch_chat_model:
     - Qwen/Qwen2.5-7B-Instruct
     - Qwen/Qwen2.5-32B-Instruct
     - Qwen/Qwen2.5-72B-Instruct
+    - Qwen/Qwen2-7B-Instruct
     - Qwen/Qwen1.5-7B-Chat
     - Qwen/Qwen1.5-4B-Chat-AWQ
     - Qwen/Qwen1.5-MoE-A2.7B-Chat
@@ -391,17 +393,16 @@ benchmark_model:
 
 
 evaluate_model:
-  ## chat
-  - Qwen/Qwen1.5-7B-Chat
-  - google/gemma-2-9b-it
+#   - Qwen/Qwen1.5-7B-Chat
+#   - google/gemma-2-9b-it
   - google/gemma-2-27b-it
-  - internlm/internlm2_5-7b-chat
-  - internlm/internlm3-8b-instruct
-  - meta-llama/Meta-Llama-3-8B-Instruct
-  - meta-llama/Meta-Llama-3-1-8B-Instruct
+#   - internlm/internlm2_5-7b-chat
+#   - internlm/internlm3-8b-instruct
+#   - meta-llama/Meta-Llama-3-8B-Instruct
+#   - meta-llama/Meta-Llama-3-1-8B-Instruct
   - Qwen/Qwen2-7B-Instruct
-  - Qwen/Qwen2.5-7B-Instruct
+#   - Qwen/Qwen2.5-7B-Instruct
   - Qwen/Qwen2.5-32B-Instruct
-  - meta-llama/Llama-2-7b-chat-hf
-  - Qwen/Qwen1.5-MoE-A2.7B-Chat
+#   - meta-llama/Llama-2-7b-chat-hf
+#   - Qwen/Qwen1.5-MoE-A2.7B-Chat
   - internlm/internlm2_5-20b-chat
