--- a/.github/workflows/api_eval.yml
+++ b/.github/workflows/api_eval.yml
@@ -138,13 +138,14 @@ jobs:
           overall_exit=0
           ln -s /mnt/187/opencompass-data/data ./data
           ln -s /nvme/qa_test_models/resource/nltk_data /usr/share/nltk_data
-          if [[ "${{ github.event.inputs.execution_mode || 'both' }}" == "both" || "${{ github.event.inputs.execution_mode || 'both' }}" == "infer" ]]; then
+          execution_mode="${{ github.event.inputs.execution_mode || 'both' }}"
+          if [ "$execution_mode" = "both" ] || [ "$execution_mode" = "infer" ]; then
             pytest autotest/evaluate/test_api_evaluate.py -m "gpu_num_1 and ${{matrix.backend}} and infer" -n 8 --run_id ${{ github.run_id }} --alluredir=${{env.REPORT_DIR}} || overall_exit=$?
             pytest autotest/evaluate/test_api_evaluate.py -m "gpu_num_2 and ${{matrix.backend}} and infer" -n 4 --run_id ${{ github.run_id }} --alluredir=${{env.REPORT_DIR}} || overall_exit=$?
             pytest autotest/evaluate/test_api_evaluate.py -m "gpu_num_4 and ${{matrix.backend}} and infer" -n 2 --run_id ${{ github.run_id }} --alluredir=${{env.REPORT_DIR}} || overall_exit=$?
             pytest autotest/evaluate/test_api_evaluate.py -m "gpu_num_8 and ${{matrix.backend}} and infer" -n 1 --run_id ${{ github.run_id }} --alluredir=${{env.REPORT_DIR}} || overall_exit=$?
           fi
-          if [[ "${{ github.event.inputs.execution_mode || 'both' }}" == "both" || "${{ github.event.inputs.execution_mode || 'both' }}" == "eval" ]]; then
+          if [ "$execution_mode" = "both" ] || [ "$execution_mode" = "eval" ]; then
             pytest autotest/evaluate/test_api_evaluate.py -m "gpu_num_1 and ${{matrix.backend}} and eval" -n 4 --run_id ${{ github.run_id }} --alluredir=${{env.REPORT_DIR}} || overall_exit=$?
             pytest autotest/evaluate/test_api_evaluate.py -m "gpu_num_2 and ${{matrix.backend}} and eval" -n 4 --run_id ${{ github.run_id }} --alluredir=${{env.REPORT_DIR}} || overall_exit=$?
             pytest autotest/evaluate/test_api_evaluate.py -m "gpu_num_4 and ${{matrix.backend}} and eval" -n 4 --run_id ${{ github.run_id }} --alluredir=${{env.REPORT_DIR}} || overall_exit=$?
