--- a/.github/workflows/api_eval.yml
+++ b/.github/workflows/api_eval.yml
@@ -125,6 +125,7 @@ jobs:
       - name: Install opencompass
         run: |
           python3 -m pip install opencompass
+          python3 -m pip install langdetect
       - name: Check env
         run: |
           python3 -m pip list
