--- a/autotest/config_ascend.yml
+++ b/autotest/config_ascend.yml
@@ -1,6 +1,7 @@
 model_path: /mnt/vc-intern-delivery/qa-llm-cicd/qa_test_models
 resource_path: /mnt/vc-intern-delivery/qa-llm-cicd/resource
 log_path: /mnt/vc-intern-delivery/qa-llm-cicd/log
+server_log_path: /mnt/vc-intern-delivery/qa-llm-cicd/server_log
 eval_path: /mnt/vc-intern-delivery/qa-llm-cicd/evaluation_report
 mllm_eval_path: /mnt/vc-intern-delivery/qa-llm-cicd/mllm_evaluation_report
 benchmark_path: /mnt/vc-intern-delivery/qa-llm-cicd/benchmark_report
@@ -19,6 +20,9 @@ config:
         internlm/Intern-S1-mini: 2
         OpenGVLab/InternVL3_5-8B: 2
         OpenGVLab/InternVL3_5-38B: 4
+        Qwen/Qwen3-VL-30B-A3B-Instruct: 4
+        Qwen/Qwen3-VL-8B-Instruct: 2
+        Qwen/Qwen3-VL-32B-Instruct: 4
 
 pytorch_chat_model:
     tp:
@@ -35,6 +39,10 @@ pytorch_vl_model:
         - OpenGVLab/InternVL3_5-2B
         - OpenGVLab/InternVL3_5-8B
         - OpenGVLab/InternVL3_5-38B
+        - Qwen/Qwen3-VL-30B-A3B-Instruct
+        - Qwen/Qwen3-VL-8B-Instruct
+        - Qwen/Qwen3-VL-32B-Instruct
+
 
 pytorch_base_model:
     tp:
@@ -56,6 +64,9 @@ pytorch_quantization:
         - OpenGVLab/InternVL3_5-2B
         - OpenGVLab/InternVL3_5-8B
         - OpenGVLab/InternVL3_5-38B
+        - Qwen/Qwen3-VL-30B-A3B-Instruct
+        - Qwen/Qwen3-VL-8B-Instruct
+        - Qwen/Qwen3-VL-32B-Instruct
     no_kvint8:
         - Qwen/Qwen3-30B-A3B
         - Qwen/Qwen3-235B-A22B
@@ -67,6 +78,9 @@ pytorch_quantization:
         - OpenGVLab/InternVL3_5-2B
         - OpenGVLab/InternVL3_5-8B
         - OpenGVLab/InternVL3_5-38B
+        - Qwen/Qwen3-VL-30B-A3B-Instruct
+        - Qwen/Qwen3-VL-8B-Instruct
+        - Qwen/Qwen3-VL-32B-Instruct
 
 longtext_model:
     - Qwen/Qwen3-30B-A3B
@@ -79,3 +93,13 @@ benchmark_model:
     - Qwen/Qwen3-0.6B
     - internlm/Intern-S1
     - internlm/Intern-S1-mini
+
+
+evaluate_model:
+    - Qwen/Qwen3-30B-A3B
+    - Qwen/Qwen3-235B-A22B
+
+mllm_evaluate_model:
+    - Qwen/Qwen3-VL-30B-A3B-Instruct
+    - Qwen/Qwen3-VL-8B-Instruct
+    - Qwen/Qwen3-VL-32B-Instruct
